--- a/back/css/common.css
+++ b/back/css/common.css
@@ -1,4 +1,24 @@
 @charset "UTF-8";
+html,body {
+  height: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+/*lv ha*/
+a:link, a:visited, a:hover, a:active {
+  text-decoration: none;
+}
+
+
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .body_bg{
   background-color: #222d32;
 }
@@ -9,4 +29,104 @@
 
 .panel h4 {
   text-align: center;
+}
+
+
+/*侧边栏*/
+.lt_aside {
+  width: 180px;
+  height: 100%;
+  background-color: #222d32;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 1s;
+}
+
+.lt_aside.now {
+  left: -180px;
+}
+
+.lt_aside .brand a {
+  display: block;
+  width: 180px;
+  height: 50px;
+  background-color: #367fa9;
+  text-align: center;
+  line-height: 50px;
+  font-size: 24px;
+  color: #fff;
+}
+
+.lt_aside .user {
+  width: 180px;
+  height: 150px;
+}
+
+.lt_aside .user img {
+  width: 80px;
+  height: 80px;
+  display: block;
+  border-radius: 50%;
+  margin: 30px auto 0;
+}
+
+.lt_aside .user p {
+  height: 40px;
+  line-height: 40px;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+}
+
+.lt_aside .nav a {
+  display: block;
+  height: 40px;
+  line-height: 40px;
+  padding-left: 30px;
+  color: #ccc;
+  border: 3px solid transparent;
+}
+
+.lt_aside .nav .child a {
+  padding-left: 50px;
+}
+
+.lt_aside .nav a.now {
+  border-left-color: #069;
+  background-color: #1d1f21;
+  color: #fff;
+}
+
+
+/*主体区样式*/
+.lt_main {
+  height: 100%;
+  width: 100%;
+  padding-left: 180px;
+  transition: all 1s;
+}
+
+.lt_main.now {
+  padding-left: 0;
+}
+
+.lt_topbar {
+  height: 50px;
+  background-color: #3c8dbc;
+  padding: 0 20px;
+  margin-bottom: 20px;
+}
+
+.lt_topbar a {
+  font-size: 16px;
+  color: #fff;
+  line-height: 50px;
+}
+
+/*报表*/
+.pic_left,
+.pic_right {
+  width: 45%;
+  height: 400px;
 }
