--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-body{
+.body_bg{
     background-color: #222d32;;
 }
 .mt_150{
@@ -9,3 +9,124 @@ body{
 .panel h4{
     text-align: center;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+a:link, a:visited, a:hover, a:active {
+    text-decoration: none;
+  }
+  
+/*然后在这个里面写入主页的内容 */
+
+html,body{
+    height: 100%;
+}
+.lt_aside.now {
+    left: -180px;
+  }
+  
+
+.lt_aside{
+    height: 100%;
+    width: 180px;
+    background-color: #222d32;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 1s;
+  
+}
+.brand a{
+    display: block;
+    width: 180px;
+    height: 50px;
+    background:  #367fa9;
+    text-align: center;
+    line-height: 50px;
+    font-size: 24px;
+    color: #fff;
+   
+}
+.user{
+    width:180px;
+    height: 150px;
+
+}
+.user img{
+    display: block;
+    width: 80px;
+    height: 80px;
+   border: 1px solid #fff;
+    border-radius: 50%;
+    margin: 30px auto 0;
+}
+.user p{
+    color: #fff;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 16px;
+}
+
+
+.lt_main.now {
+    padding-left: 0;
+  }
+
+.lt_aside .nav{
+    width: 180px;
+    height: 130px;
+}
+.lt_aside .nav a{
+    display: block;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 30px;
+    color: #fff;
+    border: 3px solid transparent;
+    
+}
+.lt_aside .nav a.now{
+   
+    border-left-color: #069;
+    background-color: #1d1f21;
+    color: #fff;
+}
+
+.lt_aside .nav .child a {
+    padding-left: 50px;
+  }
+.lt_main{
+    height: 100%;
+    width: 100%;
+    padding-left: 180px;
+    transition: all 1s;
+}
+
+ .lt_main .lt_topbar{
+    height: 50px;
+    background-color: #3c8dbc;
+    padding: 0 20px;
+    margin-bottom: 20px;
+
+}
+
+
+.lt_topbar a{
+    font-size: 16px;
+    color: #fff;
+    line-height: 50px;
+}
+
+
+.pic_left,.pic_right{
+    width: 45%;
+    /* background: red; */
+    height: 400px;
+
+}
+
