二级数据渲染

--- a/public/back1/back/css/common.css
+++ b/public/back1/back/css/common.css
@@ -142,9 +142,10 @@ a:link, a:visited, a:hover, a:active {
 }
 
 
-.fileupload_box {
+fileupload_box{
   width: 82px;
   height: 34px;
+
   position: relative;
 }
 
