--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -139,3 +139,27 @@ html,body{
     text-align: center;
     
 }
+
+
+
+/* 然后给个样式定位过 */
+.fileupload_box {
+    width: 82px;
+    height: 34px;
+    position: relative;
+  }
+  
+  .fileupload_box:hover button {
+    color: #333;
+    background-color: #e6e6e6;
+    border-color: #adadad;
+  }
+  
+  .fileupload_box input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+  }
